Fix: spacing, background

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     color: #6c757d;
-    background-color: #F5F8FA;
+    background-color: #edf1f5;
 }
 a {
     color: #e66767;
@@ -32,8 +32,8 @@ a:hover{
     transition: all 0.3s;
 }
 #content-main {
-    min-height: 80vh;
-    margin-top: 20px;
+    min-height: 84vh;
+    padding: 10px;
 }
 #top-nav {
     padding: 0 30px;
@@ -56,10 +56,12 @@ a:hover{
     text-transform: uppercase;
     text-shadow: 2px 2px rgba(100,100,100,0.1);
 }
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto{
+    padding:10px;
+}
 
 .footer {
     background: #ffffff;
-    margin-top:20px;
     color: #98a6ad;
     text-align: center;
     box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.05);
@@ -70,13 +72,24 @@ a:hover{
     padding: 25px 10px;
 }
 .card {
-    width: 100%;
-    border: none;
-    box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.05);
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid transparent;
+    border-radius: .25rem;
 }
 .card .header-title {
     margin-bottom: 30px;
-    border-bottom: 2px solid #f5f8fa;
+    border-bottom: 1px solid #edf1f5;
     padding-bottom: 15px;
     font-weight: 600;
 }
@@ -101,7 +114,7 @@ a:hover{
 }
 #accordion .card-body {
     padding: 25px;
-    background: #f5f8fa;
+    background: #edf1f5;
     border-radius: 0;
 }
 #accordion .card-header a,
@@ -165,14 +178,14 @@ a:hover{
 }
 
 #left-menu a:hover{
-    background: #F5F8FA;
+    background: #edf1f5;
     color:#e66767;
     display: block;
 }
 
 #left-menu .active a {
     color:#e66767;
-    background: #F5F8FA;
+    background: #edf1f5;
 }
 
 #left-menu .dashboard a {
@@ -197,7 +210,7 @@ a:hover{
 }
 
 #left-menu .helpbox{
-    border-top:3px solid #F5F8FA;
+    border-top:3px solid #edf1f5;
     padding-top: 10px;
 }
 
@@ -282,7 +295,7 @@ h4 {
 }
 
 .bg-light{
-    background-color: #F5F8FA !important;
+    background-color: #edf1f5 !important;
 }
 
 .bg-dark {
@@ -341,7 +354,7 @@ code, code a {
 }
 
 .nav-pills {
-    border-bottom: 3px solid #f5f8fa;
+    border-bottom: 3px solid #edf1f5;
 }
 
 /* Tooltips & Popovers */
@@ -498,7 +511,7 @@ button .svg-inline--fa {
 }
 /* Tables */
 .table-striped tbody tr:nth-of-type(odd) {
-    background-color: #F5F8FA;
+    background-color: #edf1f5;
 }
 
 /* Forms */
@@ -508,13 +521,13 @@ button .svg-inline--fa {
 
   }
   .form-control:disabled, .form-control[readonly] , .custom-select:disabled{
-    background-color: #f5f8fa;
+    background-color: #edf1f5;
     opacity: 1;
     color: #afafaf;
 
   }
   .custom-select option {
-    background: #f5f8fa;
+    background: #edf1f5;
   }
   .custom-control-input:focus{
     background-color:#e66767;
